--- a/tl-wan-tunnel.html
+++ b/tl-wan-tunnel.html
@@ -58,7 +58,7 @@
 </head>
 <body>
 
-  <h2>🌐 Transcripción, Traducción y Voz - wan - tunel</h2>
+  <h2>🌐 Transcripción, Traducción y Voz - wan - tunnel</h2>
 
   <div class="botones-container">
     <label for="idiomaOrigen">Idioma de entrada:</label>
